--- a/estilo/syle.css
+++ b/estilo/syle.css
@@ -72,6 +72,8 @@ nav {
 	background-color: var(--cor3);
 	padding: 10px;
 	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.400);
+	text-align: center;
+	font-size: 20.5px;
 }
 
 nav > a {
@@ -80,7 +82,7 @@ nav > a {
 	text-decoration: none;
 	font-weight: bold;
 	border-radius: 5px;
-	transition-duration: 1s;
+	transition-duration: 0.5s;
 }
 
 
