--- a/android.css
+++ b/android.css
@@ -1,85 +1,55 @@
-body{
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
     background-color: rgb(165, 223, 178);
 }
-
-@font-face {
-    font-family: 'Android';
-    src: url('../fontes/idroid.otf') format('opentype');
-}
-
-:root{
-    --font-android: 'Android', cursive;
-    --cor0: #89CDA5;
-	--cor2: #5CBE7D;
-	--cor3: #1A5A37;
-}
-
-header{
+header {
     background-color: rgb(180, 235, 180);
-    height: 100px;
-    margin: 16px;
-	padding: 13px;
     color: #274631;
-    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.400);
-    border-radius: 20px;
     text-align: center;
-    font-family: var(--font-android);
+    padding: 10px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.400);
+    margin-bottom: 20px; /* Espaço inferior para evitar sobreposição */
 }
-
-header >h1{
-    margin: 30px;
+header h1 {
+    margin: 0;
+    padding: 10px;
     border-radius: 7px;
+    font-family: 'Android', cursive;
 }
-
 main {
     background-color: rgb(180, 235, 180);
-    text-align: center;
-    width: 882px;
-    padding: 35px;
-    border-radius: 22px 22px 22px 22px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -33%);
-    font-size: 1.1em;
-    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.400);
+    padding: 10px;
+    margin-top: 20px; /* Espaço superior para evitar sobreposição */
 }
-
-main p{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 1.1em;
-    font-weight: bold;
+aside {
+    background: linear-gradient(to right, #aef7c6, #caffdc);
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.062);
+    margin-top: 10px;
 }
-
-main h1{
-    font-family: var(--font-android);
-    background-image:  linear-gradient(to right, #aef7c6, #caffdc);
-    }
-
-main a{
-    text-decoration: none;
+a {
     color: green;
+    text-decoration: none;
     font-size: 1.5em;
 }
-
-main a:hover{
+a:hover {
     background-color: rgb(132, 204, 132);
     font-size: 2em;
 }
-
-aside{
-    background-image:  linear-gradient(to right, #aef7c6, #caffdc);
-    padding: 22px;
-    border-radius: 8px 8px 8px 8px;
-    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.062);
-}
-
-#id{
+p {
     font-family: 'Times New Roman', Times, serif;
     font-size: 1.1em;
     font-weight: bold;
 }
-
-#id:hover{
+#id {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.1em;
+    font-weight: bold;
+}
+#id:hover {
     font-size: 1.2em;
 }
